Add Clock in Hero

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Project Tracker</title>
 </head>
 <body>
-    
+    <header>
+        <div id="hero">
+            <div id="clock">
+                <h1></h1>
+            </div>
+        </div>
+    </header>
+    <!-- Day.js and jquery tings -->
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
