--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap Link -->
+    <!-- Bootstrap CSS Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- these links made my modal werk :3 -->
+    <!-- these links made my modal werk :3 jquery 3.6 and Bootstrap javascript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles.css">
@@ -25,23 +25,6 @@
     </div>
   </header>
   <main class="flex-grow-1">
-    <!-- Instructions Card Component -->
-    <section>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Instructions</h5>
-          <p class="card-text">Click the button below to open a form and provide information for the following:</p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Project Name</li>
-          <li class="list-group-item">Project Type</li>
-          <li class="list-group-item">Due Date</li>
-          <li class="list-group-item">Hourly Rate</li>
-        </ul>
-        <div class="card-body">
-          <a href="#" class="card-link">Add Project</a>
-        </div>
-    </header>
     <!-- Instructions Card Component -->
     <section>
         <div class="card" style="width: 18rem;">
@@ -110,7 +93,7 @@
     <h5>Made with ❤️ by Ducki and Gewsi</h5>
   </footer>
 
-  <!-- Javascript LINK -->
+  <!-- dayJS and our script.js -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <script src="./script.js"></script>
 </body>
