Refactor little tings

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="d-flex flex-column justify-content-between">
   <!-- Header with Clock -->
-  <header class="">
+  <header class="h-auto">
     <div id="hero" class="w-100 d-flex flex-column justify-content-center align-items-center">
       <h1>Project Tracker</h1>
       <h2>Current time and date:</h2>
