--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
   </header>
-  <main class="flex-grow-1">
+  <main class="flex-grow-1 m-4">
     <!-- Instructions Card Component -->
     <section>
       <div class="card" style="width: 18rem;">
@@ -96,7 +96,7 @@
     </div>
   </main>
   <footer class="d-flex flex-column justify-content-center align-items-center">
-    <h5>Made with ❤️ by Ducki and Gewsi</h5>
+    <h5 class="my-4">Made with ❤️ by Ducki and Gewsi</h5>
   </footer>
 
   <!-- dayJS and our script.js -->
