--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
   </header>
-  <main class="flex-grow-1 m-4">
+  <main class="flex-grow-1 d-flex flex-row justify-content-between m-4">
     <!-- Instructions Card Component -->
     <section>
       <div class="card" style="width: 18rem;">
@@ -94,7 +94,7 @@
       </div>
     </div>
     <!-- Chart Component -->
-    <div>
+    <div class="w-50">
       <table class="table" id="table">
         <thead class="thead-dark">
           <tr>
