--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         </div>
       </div>
     </div>
-    <!-- Chart Component -->
-    <div>
+    <!-- Table Component -->
+    <div id="table-div">
       <table class="table" id="table">
         <thead class="thead-dark">
           <tr>
