Change table values

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             <div class="input-group mb-3">
               <select class="form-select" id="inputGroupSelect02">
                 <option selected>Choose...</option>
-                <option value="1">Web Application (Front End)</option>
-                <option value="2">Web Application (Back End)</option>
-                <option value="3">Web Application (Full Stack)</option>
-                <option value="4">Mobile Application</option>
-                <option value="5">Print Campaign</option>
-                <option value="6">Digital Marketing Campaign</option>
+                <option value="Web Application (Front End)">Web Application (Front End)</option>
+                <option value="Web Application (Back End)">Web Application (Back End)</option>
+                <option value="Web Application (Full Stack)">Web Application (Full Stack)</option>
+                <option value="Mobile Application">Mobile Application</option>
+                <option value="Print Campaign">Print Campaign</option>
+                <option value="Digital Marketing Campaign">Digital Marketing Campaign</option>
               </select>
               <label class="input-group-text" for="inputGroupSelect02">Project Type</label>
             </div>
